Droid: fixed top of buttons get truncated in dark theme

--- a/QuickShare.Droid/Assets/html/dark.css
+++ b/QuickShare.Droid/Assets/html/dark.css
@@ -32,10 +32,6 @@ body {
     opacity:0.5;
 }
 
-.mdl-layout__header {
-    background-color: #1A1A1A;
-}
-
 .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab {
     background: #004E8C;
     border: 1px #0078D7 solid;
